--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>Latency Tester</title>
   <!-- htmx library (your only JS!) -->
-  <script src="https://unpkg.com/htmx.org@1.11.1"></script>
-  <style>
+  <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJ  <style>
     body { font-family: sans-serif; padding: 2rem; }
     button { padding: 0.5rem 1rem; font-size: 1rem; }
     #result { margin-top: 1rem; font-size: 1.25rem; }
